# Stopwatch-3Ways

./: .gitignore  README.md
cpp/: Firsttut.sln  Firsttut.vcxproj  Firsttut.vcxproj.filters  main.cpp  stopwatch.cpp  stopwatch.h
qt/: CMakeLists.txt  main.qml  qmlmodules
qt/components/: PauseButton.qml  ResetButton.qml  StartButton.qml  StopButton.qml  spinUI.qml
qt/content/: App.qml  Screen01.ui.qml
qt/imports/: CMakeLists.txt
qt/imports/qt/: CMakeLists.txt  qmldir
qt/imports/qt/designer/: plugin.metainfo
qt/src/: import_qml_plugins.h  main.cpp
qt/stopwatch/: CMakeLists.txt  main.qml  qmlmodules  stopwatch.qmlproject
qt/stopwatch/content/: App.qml  Screen01.ui.qml
qt/stopwatch/imports/: CMakeLists.txt
qt/stopwatch/imports/stopwatch/: CMakeLists.txt  qmldir
qt/stopwatch/imports/stopwatch/designer/: plugin.metainfo
qt/stopwatch/src/: import_qml_plugins.h
reflex/: resources.xml
reflex/code/: entry.cpp  resources.cpp  resources.h
reflex/project/android/: settings.gradle
reflex/project/android/app/: CMakeLists.txt  build.gradle
reflex/project/android/app/src/main/: AndroidManifest.xml
reflex/project/ios/reflex (iOS).xcodeproj/: project.pbxproj
reflex/project/ios/reflex (iOS).xcodeproj/xcshareddata/xcschemes/: App.xcscheme
reflex/project/macos/reflex.xcodeproj/: project.pbxproj
reflex/project/macos/reflex.xcodeproj/xcshareddata/xcschemes/: App.xcscheme  (+1 more)
reflex/project/win/: .gitignore
reflex/project/win/vcxproj/: App.vcxproj  App.vcxproj.filters  Paths.props
reflex/resources/: interface.h  main.c  styles.txt  view.c
(+3 files in other folders)
